<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="weather"
            type="com.elmorshdi.weatheraplication.domain.weather.WeatherData" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="18dp"
        android:background="@drawable/gradient_background"
        tools:context=".view.ui.WeatherFragment">
        <ProgressBar
            android:id="@+id/progress_circular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:shadowColor="@color/white"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/design_default_color_error"
            android:drawableTop="@drawable/ic_baseline_error_24"
            android:drawableTint="@color/design_default_color_error"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentInfo"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomContainer">
            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/ic_edit_location_24"
                app:layout_constraintTop_toTopOf="@id/cityName"
                app:layout_constraintBottom_toBottomOf="@+id/cityName"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tanta"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toEndOf="@id/locationIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/reloadButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/reload"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:layout_marginEnd="18dp"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/currentWeatherImg"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:contentDescription="@string/currentWeatherImg"
                android:src="@drawable/_0d"
                android:scaleType="fitXY"
                loadImage="@{weather.weatherType.iconRes}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityName"
                tools:ignore="ImageContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/currentWeatherImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentWeatherTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_68ssp"
                    android:text="@string/_26"
                    setTemp="@{weather.temperature}"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/c"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_30ssp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/currentWeatherTemp"
                    app:layout_constraintTop_toTopOf="@id/currentWeatherTemp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:checked="false"
                    android:textStyle="bold"
                    android:text="@string/f"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_30ssp"
                    app:layout_constraintStart_toEndOf="@id/celsius"
                    app:layout_constraintTop_toTopOf="@id/currentWeatherTemp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/feelsLikeTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/feels_like"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintTop_toBottomOf="@+id/celsius"
                    app:layout_constraintStart_toStartOf="@id/feelsLike"
                    app:layout_constraintBottom_toTopOf="@id/feelsLike" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/feelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_27"
                    setDegree="@{weather.feelsLike}"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:padding="5sp"
                    app:layout_constraintStart_toEndOf="@id/currentWeatherTemp"
                    app:layout_constraintBottom_toBottomOf="@id/currentWeatherTemp" />

                <TextView
                    android:id="@+id/currentWeatherDisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_26sdp"
                    android:text="@{weather.weatherDescription}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/currentWeatherTemp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/windContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/windValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_2_2km_h"
                    setWindSpeed="@{weather.windSpeed}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableTint="@color/white"
                    android:drawablePadding="4dp"
                    app:drawableBottomCompat="@drawable/ic_wind" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray"
                    android:text="@string/wind"
                    app:layout_constraintTop_toBottomOf="@id/windValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/humidityContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_58"
                    setHumidity="@{weather.humidity}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableTint="@color/white"
                    android:drawablePadding="4dp"
                    app:drawableBottomCompat="@drawable/ic_drop" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray"
                    android:text="@string/humidity"
                    app:layout_constraintTop_toBottomOf="@id/humidityValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/date_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/day_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/hour_rv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hour_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/hour_item"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

