<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.MapsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:padding="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/choose_location_on_map"
                android:textStyle="bold"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="@id/backArrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/pan_and_zoom_to_adjust"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/backArrow"
                app:layout_constraintBottom_toBottomOf="@id/backArrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/google_map"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            tools:layout="@layout/fragment_maps" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2a4947"
                android:text="@string/nepean_street"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/adress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:text="@string/pan_and_zoom_to_adjust"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="44dp"
            android:clickable="true"
            android:contentDescription="@string/done"
            android:focusable="true"
            android:src="@drawable/ic_baseline_done_24"
            android:translationZ="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
